// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unhandled Error Transformer Tests When AuthApiError is returned should add Infobox with unexpected error message when error is not provided 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "class": "ERROR",
          "dataSe": "callout",
          "message": Object {
            "class": "ERROR",
            "i18n": Object {
              "key": "oform.error.unexpected",
            },
            "message": "oform.error.unexpected",
          },
        },
        "type": "InfoBox",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Unhandled Error Transformer Tests When AuthApiError is returned should add infobox with custom message from server 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "class": "ERROR",
          "dataSe": "callout",
          "message": Object {
            "class": "ERROR",
            "message": "Custom error message",
          },
        },
        "type": "InfoBox",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Unhandled Error Transformer Tests When OAuthError is returned should add Infobox with unexpected error message when error is not provided 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "class": "ERROR",
          "dataSe": "callout",
          "message": Object {
            "class": "ERROR",
            "i18n": Object {
              "key": "oform.error.unexpected",
            },
            "message": "oform.error.unexpected",
          },
        },
        "type": "InfoBox",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Unhandled Error Transformer Tests When OAuthError is returned should add info box when oie configuration error 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "class": "ERROR",
          "dataSe": "callout",
          "message": Object {
            "class": "ERROR",
            "i18n": Object {
              "key": "oie.configuration.error",
            },
            "message": "oie.configuration.error",
          },
        },
        "type": "InfoBox",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Unhandled Error Transformer Tests When OAuthError is returned should add info box when oie is not enabled error 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "class": "ERROR",
          "dataSe": "callout",
          "message": Object {
            "class": "ERROR",
            "i18n": Object {
              "key": "oie.feature.disabled",
            },
            "message": "oie.feature.disabled",
          },
        },
        "type": "InfoBox",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Unhandled Error Transformer Tests When OAuthError is returned should add info box when response is invalid activation token error 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "class": "ERROR",
          "dataSe": "callout",
          "message": Object {
            "class": "ERROR",
            "i18n": Object {
              "key": "idx.missing.activation.token",
            },
            "message": "idx.missing.activation.token",
            "title": "oie.activation.request.email.title.invalid",
          },
        },
        "type": "InfoBox",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Unhandled Error Transformer Tests When OAuthError is returned should add info box when response is invalid recovery token error 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "class": "ERROR",
          "dataSe": "callout",
          "message": Object {
            "class": "ERROR",
            "i18n": Object {
              "key": "oie.invalid.recovery.token",
            },
            "message": "oie.invalid.recovery.token",
          },
        },
        "type": "InfoBox",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
